--- a/bower.json
+++ b/bower.json
@@ -4,7 +4,7 @@
   "dependencies": {
     "angular": "latest",
     "angular-ui-router": "~0.2.15",
-    "angular-resource": "latest",
+    "angular-resource": "*",
     "angular-sanitize": "latest",
     "angular-touch": "latest",
     "bootstrap": "latest",
