--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "bower": "^1.4.1",
     "ejs": "^2.3.3",
     "express": "^4.13.3",
-    "mongoose": "^4.0.2"
+    "mongoose": "^4.0.2",
+    "request": "^2.67.0"
   },
   "directories": {
     "test": "test"
